--- a/.editorconfig
+++ b/.editorconfig
@@ -8,15 +8,15 @@ charset = utf-8
 trim_trailing_whitespace = true
 
 [*.css]
-indent_style = space
+indent_style = tab
 indent_size = 2
 
 [*.scss]
-indent_style = space
+indent_style = tab
 indent_size = 2
 
 [*.json]
-indent_style = space
+indent_style = tab
 indent_size = 2
 
 [*.md]
